feat(dashboard) : dashboard styling

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -8,6 +8,15 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/dashboard/home" routerLinkActive="active">Accueil</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/dashboard/products" routerLinkActive="active">Produits</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/dashboard/employee" routerLinkActive="active">Employés</a>
+        </li>
+        <li class="nav-item logout">
+          <a class="nav-link" routerLink="" (click)="logoutHandler()">Déconnexion</a>
+        </li>
       </ul>
     </div>
   </div>
