--- a/client/src/app/dashboard/dashboard.component.scss
+++ b/client/src/app/dashboard/dashboard.component.scss
@@ -1,11 +1,12 @@
 .sidebar {
-  background-color: #ffffff;
+  background-color: #2b7655;
   padding: 2em 0;
   height: 100vh;
   width: 280px;
   right: 0;
   position: fixed;
   z-index: 100;
+  left: 0;
 }
 
 .sidebar-header {
@@ -15,8 +16,47 @@
 
   .sidebar-logo {
     display: block;
-    height: 60px;
-    padding-left: 2.75em;
+    height: 100px;
     width: auto;
+    margin: 0 auto;
   }
+}
+
+.sidebar-navigation {
+  padding-top: 2em;
+  padding-left: unset;
+}
+
+.sidebar-navigation .nav-link {
+  color: #ffffff;
+  line-height: 1.5em;
+  &.active, &:hover, &:focus {
+    font-weight: 600;
+    cursor: pointer;
+  }
+}
+
+.sidebar-navigation .nav-item:not(.logout) .nav-link {
+  &.active, &:hover, &:focus {
+    &:after {
+      content: '>';
+      font-size: 1.5em;
+      float: right
+    }
+  }
+}
+
+.sidebar-navigation .nav-item {
+  padding: 0.5em 1em;
+
+  &.logout {
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 2em;
+  }
+}
+
+.main-content {
+  padding-left: 280px;
+  padding-top: 20px;
 }
