--- a/client/src/app/dashboard/products/edit-product/edit-product.component.html
+++ b/client/src/app/dashboard/products/edit-product/edit-product.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h1>Nouveau produit</h1>
+  <h1>Modifier produit</h1>
   <div class="create-product">
     <form>
       <div class="form-group">
@@ -23,7 +23,10 @@
         <label for="productPrice">Prix</label>
         <input type="number" class="form-control" id="productPrice">
       </div>
-      <button type="submit" class="btn btn-success">Enregistrer</button>
+      <div class="actions">
+        <button type="submit" class="btn btn-success">Enregistrer</button>
+        <button class="btn btn-danger"><i class="fa fa-trash"></i> Supprimer</button>
+      </div>
     </form>
   </div>
 </div>
