--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
           <a class="nav-link" routerLink="/dashboard/products" routerLinkActive="active">Produits</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/dashboard/employee" routerLinkActive="active">Employés</a>
+          <a class="nav-link" routerLink="/dashboard/employees" routerLinkActive="active">Employés</a>
         </li>
         <li class="nav-item logout">
           <a class="nav-link" routerLink="" (click)="logoutHandler()">Déconnexion</a>
