--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
           <a class="nav-link" routerLink="/dashboard/employees" routerLinkActive="active">Employés</a>
         </li>
         <li class="nav-item logout">
-          <a class="nav-link" routerLink="" (click)="logoutHandler()">Déconnexion</a>
+          <a class="nav-link" routerLink="/login">Déconnexion</a>
         </li>
       </ul>
     </div>
